# CycleGAN_sim2real

./: .gitignore  .pre-commit-config.yaml  Get_dataset_from_disk.ipynb  README.md  get_dataset.py  predict.py  pyproject.toml  setting.json  setup.cfg  test.py  test_image.py  test_video.py  train.py
cyclegan_pytorch/: datasets.py  fid_loss.py  inception_for_loss.py  models.py  optim.py  utils.py
runs/Jun09_13-25-42_ip-172-31-53-194/: events.out.tfevents.1654781142.ip-172-31-53-194.16595.0
runs/Jun09_13-27-00_ip-172-31-53-194/: events.out.tfevents.1654781220.ip-172-31-53-194.16622.0
runs/Jun09_13-28-28_ip-172-31-53-194/: events.out.tfevents.1654781308.ip-172-31-53-194.16669.0
runs/Jun09_13-29-01_ip-172-31-53-194/: events.out.tfevents.1654781341.ip-172-31-53-194.16694.0
runs/Jun09_14-05-34_ip-172-31-53-194/: events.out.tfevents.1654783534.ip-172-31-53-194.17371.0
runs/Jun09_14-41-40_ip-172-31-53-194/: events.out.tfevents.1654785700.ip-172-31-53-194.17767.0
runs/Jun09_17-58-05_ip-172-31-53-194/: events.out.tfevents.1654797485.ip-172-31-53-194.3738.0
runs/Jun09_17-59-55_ip-172-31-53-194/: events.out.tfevents.1654797595.ip-172-31-53-194.3762.0
runs/Jun09_18-03-01_ip-172-31-53-194/: events.out.tfevents.1654797781.ip-172-31-53-194.3835.0
runs/Jun09_18-10-32_ip-172-31-53-194/: events.out.tfevents.1654798232.ip-172-31-53-194.3918.0
runs/Jun09_18-14-44_ip-172-31-53-194/: events.out.tfevents.1654798484.ip-172-31-53-194.4648.0
runs/Jun10_09-01-44_ip-172-31-53-194/: events.out.tfevents.1654851704.ip-172-31-53-194.3172.0
runs/Jun10_09-02-37_ip-172-31-53-194/: events.out.tfevents.1654851757.ip-172-31-53-194.3220.0
runs/Jun10_09-04-23_ip-172-31-53-194/: events.out.tfevents.1654851863.ip-172-31-53-194.3244.0
runs/Jun10_09-05-14_ip-172-31-53-194/: events.out.tfevents.1654851914.ip-172-31-53-194.3293.0
runs/Jun10_09-05-30_ip-172-31-53-194/: events.out.tfevents.1654851930.ip-172-31-53-194.3315.0
runs/Jun10_09-08-32_ip-172-31-53-194/: events.out.tfevents.1654852112.ip-172-31-53-194.3365.0
runs/Jun10_09-10-07_ip-172-31-53-194/: events.out.tfevents.1654852207.ip-172-31-53-194.3388.0
runs/Jun10_09-10-44_ip-172-31-53-194/: events.out.tfevents.1654852244.ip-172-31-53-194.3410.0
runs/Jun10_09-11-37_ip-172-31-53-194/: events.out.tfevents.1654852297.ip-172-31-53-194.3454.0
(+2 files in other folders)
