[tool.poetry]
name = "-cyclegan_sim2real"
version = "0.1.0"
description = ""
authors = ["AnyashaTk <47858669+AnyashaTk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
