[tool.poetry]
name = "cyclegan-pytorch"
version = "0.1.0"
description = ""
authors = ["Glebbs <glebrost2013@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.11.0"
tqdm = "^4.64.0"
numpy = "^1.23.0"
opencv-python = "^4.6.0"
torchvision = "^0.12.0"
Pillow = "^9.1.1"
matplotlib = "^3.5.2"
pycocotools = "^2.0.4"
tensorboard = "^2.9.1"
tensorboardX = "^2.5.1"
PyYAML = "^6.0"
webcolors = "^1.12"
yadisk = "^1.2.15"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "0.941"
flake8 = "^4.0.1"
flake8-bugbear = "22.6.22"
flake8-builtins = "1.5.3"
flake8-comprehensions = "3.10.0"
flake8-docstrings = "1.6.0"
flake8-import-order = "0.18.1"
flake8-tidy-imports = "4.8.0"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = "(^tests/| ^notebooks/)"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
force_sort_within_sections = true
line_length = 79
order_by_type = false
known_first_party=["app", "src", "cyclegan_pytorch"]
